Fix a stupid bug with the .logo__title on Firefox.

--- a/_sources/header.scss
+++ b/_sources/header.scss
@@ -82,6 +82,7 @@
     width: 82px;
     height: 82px;
     box-shadow: 0 0 6px #333;
+    vertical-align: middle;
   }
 
   .logo__title {
