--- a/static/css/pixelnest.css
+++ b/static/css/pixelnest.css
@@ -131,7 +131,8 @@ li {
     display: table-cell;
     width: 82px;
     height: 82px;
-    box-shadow: 0 0 6px #333; }
+    box-shadow: 0 0 6px #333;
+    vertical-align: middle; }
 
   .logo__title {
     display: table-cell;
